Remove scrollbar from crop view and fix image path on Recipe Form

--- a/client/src/components/ScanModal/ScanModal.scss
+++ b/client/src/components/ScanModal/ScanModal.scss
@@ -15,7 +15,6 @@
         align-items: center;
         width: 100%;
         padding: 0.5rem 1rem;
-        // margin-bottom: 40%;
     }
 
     &__close {
@@ -32,8 +31,6 @@
     &__crop-view {
         width: 100%;
         height: 100%;
-        overflow: scroll;
-        // object-fit: scale-down;
     }
 
     &__bottom {
